# clippy

./: COPYING  README.md  meson.build  org.gnome.Clippy.json
src/: main.js  meson.build  org.gnome.Clippy.src.gresource.xml
src/lib/: clippy-board.c  clippy-board.h  clippy.c  clippy.h
